<resources>
    <string name="app_name">RELO CLUB</string>
    <string name="xlistview_footer_hint_ready" />
    <string name="xlistview_footer_hint_normal" />
    <string name="xlistview_header_hint_normal" />
    <string name="xlistview_header_hint_ready" />
    <string name="xlistview_header_hint_loading" />
    <string name="xlistview_header_last_time" />
    <string name="title_coupon_area">携帯会員証</string>
    <string name="title_coupon_area_tab">携帯\n会員証</string>
    <string name="title_membership">ホームページ</string>
    <string name="title_coupon_list">人気クーポン</string>
    <string name="title_coupon_list_tab">人気クー\nポン</string>
    <string name="title_coupon_list_area">エリアクーポン</string>
    <string name="title_coupon_list_area_tab">エリアク\nーポン</string>
    <string name="title_member">会員サイト</string>
    <string name="title_member_tab">会員\nサイト</string>
    <string name="title_receipt">レシート\nで貯める</string>

    <!-- Login Fragment-->
    <string name="txt_bt_login">ログインボタン</string>
    <string name="txt_login_username">ログインID</string>
    <string name="txt_login_app_id">アプリID</string>
    <string name="txt_login_mail">メールアドレス</string>
    <string name="txt_link_forget_id">会員IDパスワードを忘れた方はこちら</string>
    <string name="txt_note_login">会員IDは数字６桁-４桁（半角）で入力してください。\※入力例：000000-0000（ハイフン含む）</string>
    <string name="txt_title_login">ログインする</string>
    <string name="title_login">ログイン</string>
    <string name="error_login_wrong_id_password">ログインですることができませんでした。\n入力内容が間違っているか、大会後の可能性がございます。会員IDもしくはパスワードを再度</string>
    <string name="error_connect_network">通信に失敗しました</string>
    <string name="error_blank_id_password">「RELO CLUB 会員ID」と「パスワード」 を入力してください</string>
    <string name="popup_yes">Yes</string>
    <string name="popup_no">No</string>
    <string name="popup_ok">OK</string>
    <string name="popup_error_api">エラーが起きていましたので、もう一度やり直してください。</string>
    <string name="error_id_empty">会員IDを入力してください</string>
    <string name="error_pass_empty">パスワードを入力してください</string>
    <string name="error_id_login_empty">ログインID を入力してください。</string>
    <string name="error_mail_empty">メールアドレスを入力してください。</string>
    <string name="error_one_fileld_empty">ログインに失敗しました。会員IDか、パスワードにあやまりがあります。</string>
    <string name="error_all_empty">会員ID、パスワードを入力してください</string>

    <!-- List Coupon -->
    <string name="txt_title_category_list_coupon">カテゴリを選ぶ</string>
    <string name="item_coupon_category_name">グルメ</string>
    <string name="item_coupon_company_name">クーポンボタン</string>

    <!--Check SSL -->
    <string name="error_ssl">ssl証明書が正しくないページですが開いてもいいですか"</string>
    <string name="limit_time">有効期限{0}まで	</string>
    <string name="btn_title_like">お気に入り</string>
    <string name="btn_title_ticket_free">画面提示クーポン</string>
    <string name="title_history_push">お知らせ</string>
    <string name="catalogy_selecte">カテゴリを選ぶ</string>
    <string name="catalogy">すべて</string>
    <string name="catalogy_fav">お気に入り</string>
    <string name="his_link">詳細はこちら</string>
    <string name="cannot_login_title">ログインできません。</string>

    <!--******************Premission locale string**********************-->
    <string name="premission_accepted">承認しました。</string>
    <!--<string name="premissionaccepted_no_accepted">ロケーションを取得するため、アクセスを承認してください。</string>-->
    <!--<string name="premission_error">アクセス許可を承認してください。</string>-->

    <!--******************Menu string**********************-->
    <string name="menu_top">TOPへ戻る</string>
    <string name="menu_tutorial">アプリの使い方</string>
    <string name="menu_FAQ">FAQ</string>
    <string name="title_can_not_login">ログインできない方はこちら</string>

    <!--error code reponse-->
    <string name="err_api">ログインができませんでした。</string>
    <string name="err_0001">会員登録がありません。</string>
    <string name="err_0002">入力内容に誤りがあります。</string>
    <string name="err_0005">お客様は現在ご利用いただけません。</string>
    <string name="err_0006">お客様のIDは、既に当クラブを退会されているためご利用いただけません。</string>
    <string name="err_0007">お客様のIDは、ご利用開始日が到来していないためご利用いただけません。</string>
    <string name="err_0010">クラブオフアプリご提供対象外のためご利用いただけません。</string>
    <string name="err_0021">当クラブのホームページより、会員情報をご登録後にご利用いただけます。</string>
    <string name="err_0022">当クラブのホームページより、会員情報をご登録後にご利用いただけます。</string>
    <string name="err_0023">入力内容に誤りがあります。</string>
    <string name="err_0099">入力内容に誤りがあります。</string>


    <string name="title_browser">WEBブラウザでサイトを開きます。</string>
    <string name="content_browser">※WEBブラウザを立ち上げた場合、閲覧していたページは表示されず、サイトのトップにアクセスします。</string>
    <string name="btn_browser">開く</string>
    <string name="btn_browser_cacel">キャンセル</string>
    <string name="title_dialog_error">エラー</string>
    <string name="tutorial_title">ログインして始めよう</string>
    <string name="string_login">Login</string>
    <string name="title_area">Mobile ID Card</string>
    <string name="title_popular_coupon">Popular Coupon</string>
    <string name="title_area_coupon">Area Coupon</string>
    <string name="title_detail_coupon">Detail Coupon</string>
    <string name="member_site_title">Site</string>
    <string name="login_hint_username">会員ID</string>
    <string name="login_hint_pass">パスワード</string>

    <string name="area1">北海道</string>
    <string name="area2">東北</string>
    <string name="area3">関東</string>
    <string name="area4">甲信越</string>
    <string name="area5">北陸・東海</string>
    <string name="area6">近畿</string>
    <string name="area7">中国・四国</string>
    <string name="area8">九州</string>
    <string name="area9">沖縄</string>
    <string name="member_auth_note_show_page">この画面をご提示ください</string>
    <string name="member_auth_note_en">Please show this page to the service provider.</string>
    <string name="member_auth_note_date">有効期限／Validity</string>
    <string name="member_auth_note_only_today">※本日限り有効\t\t {0}</string>
    <string name="member_auth_note_only_today_en">valid for the date shown only</string>
    <string name="member_auth_note_memberid">会員ID/MEMBER ID</string>
    <string name="member_auth_note_member_account_en">Please refer to how to use for each service prior to usage.</string>
    <string name="member_auth_note_member_account">※一部施設ではご利用いただけません。商品詳細ページでご確認のうえご利用ください。</string>
    <string name="member_auth_note_error">退会・休会・端末の環境設定等により、現在ご利用いただけません。 お心あたりのない方はお手数ですが、下記までお問い合わせください。</string>
    <string name="member_auth_note_error2">-------------------------------------</string>
    <string name="member_auth_note_error3">福利厚生倶楽部カスタマーセンター</string>
    <string name="member_auth_note_error4">0120-982291</string>
    <string name="member_auth_note_error4_tel">
        TEL:</string>
    <string name="member_auth_note_error5">平日／10：00～18：00</string>
    <string name="member_auth_note_error6">土日祝／10：00～17：00※年末年始を除く</string>
    <string name="string_show_area">現在地から探す</string>
    <string name="btn_update">Update</string>
    <string name="btn_cancel">Cancel</string>
    <string name="title_update">Title update</string>
    <string name="message_update">Version {0} is available, please update to use</string>
    <string name="detail_offline_title_page1">画面提示クーポン（携帯会員証） </string>
    <string name="detail_offline_title_page2">Coupon</string>
    <string name="detail_offline_note">この画面をご提示ください。\nPlease show page to the service provider</string>
    <string name="detail_offline_copyright">Copyright (C) 2017 Relo Club,Ltd.\nAll Rights Reserved.</string>
    <string name="detail_offline_copyright_template">Copyright (C) {0} Relo Club,Ltd.\nAll Rights Reserved.</string>
    <string name="detail_offline_date">※本日限り有効　{0}</string>
    <string name="detail_offline_coupon_name_template">{0}/{1}</string>
    <string name="show_guide">Map</string>
    <string name="sub_show_guide">地図</string>
    <string name="string_note">【注意事項】</string>
    <string name="string_error_login">会員サイトでパスワードを変更した場合、再度ログインが必要です。\n恐れ入りますが、新しいパスワードを入力し、もう一度ログインをお願いいたします。</string>
    <string name="detail_coupon_member_lable">会員特典 / Member\'s Privilege</string>
    <string name="lable_id_login">会員ID</string>
    <string name="title_chooser_file">アップロード方法を選択してください。</string>
    <string name="force_update_title">お知らせ</string>
    <string name="popup_update">アップデートを行う</string>
</resources>
