<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">
        <LinearLayout
            android:orientation="vertical" android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:layout_margin="@dimen/_5dp"
                android:scaleType="fitCenter"
                android:src="@drawable/card"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/member_auth_note_show_page"
                android:layout_marginTop="@dimen/_10dp"
                android:layout_marginLeft="@dimen/_10dp"
                android:layout_marginRight="@dimen/_10dp"
                android:textStyle="bold"
                android:textSize="@dimen/text_size_xlarge"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/member_auth_note_en"
                android:textColor="@color/color_hint_text_170"
                android:layout_marginLeft="@dimen/_10dp"
                android:layout_marginRight="@dimen/_10dp"
                android:textSize="@dimen/text_size_medium"/>
            <!--2-->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/member_auth_note_date"
                android:layout_marginTop="@dimen/_20dp"
                android:layout_marginBottom="@dimen/_20dp"
                android:padding="@dimen/_10dp"
                android:background="@color/gray221"
                android:textSize="@dimen/text_size_medium"/>
            <TextView
                android:id="@+id/tvValid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:textStyle="bold"
                android:layout_marginLeft="@dimen/_10dp"
                android:layout_marginRight="@dimen/_10dp"
                android:textSize="@dimen/text_size_xlarge"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/member_auth_note_only_today_en"
                android:textColor="@color/color_hint_text_170"
                android:layout_marginLeft="@dimen/_10dp"
                android:layout_marginRight="@dimen/_10dp"
                android:textSize="@dimen/text_size_medium"/>

            <!--3-->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/member_auth_note_memberid"
                android:layout_marginTop="@dimen/_20dp"
                android:layout_marginBottom="@dimen/_20dp"
                android:padding="@dimen/_10dp"
                android:background="@color/gray221"
                android:textSize="@dimen/text_size_medium"/>
            <TextView
                android:id="@+id/tvMemberID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10dp"
                android:layout_marginRight="@dimen/_10dp"
                android:textStyle="bold"
                android:textSize="@dimen/text_size_xlarge"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/member_auth_note_member_account"
                android:layout_marginLeft="@dimen/_10dp"
                android:layout_marginRight="@dimen/_10dp"
                android:textSize="@dimen/text_size_large"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/member_auth_note_member_account_en"
                android:textColor="@color/color_hint_text_170"
                android:layout_marginLeft="@dimen/_10dp"
                android:layout_marginRight="@dimen/_10dp"
                android:layout_marginBottom="@dimen/_20dp"
                android:textSize="@dimen/text_size_medium"/>
        </LinearLayout>
    </ScrollView>
</FrameLayout>