<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:id="@+id/header"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:layout_weight="1"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/_10dp"
                    android:paddingBottom="@dimen/_10dp"
                    android:background="@color/bg_detail_off_header"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/detail_offline_title_page1"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_size_xxlarge"
                        android:textStyle="bold" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/detail_offline_title_page2"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_size_xxlarge" />
                </LinearLayout>
                <TextView
                    android:id="@+id/tvDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/detail_offline_date"
                    android:layout_margin="@dimen/_5dp"
                    android:textSize="@dimen/text_size_small"
                    android:textStyle="bold"
                    android:textAlignment="textEnd"
                    android:textColor="@color/color_textview_84"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/detail_offline_note"
                    android:layout_marginTop="@dimen/_10dp"
                    android:textSize="@dimen/text_size_small"
                    android:textAlignment="center"
                    android:textColor="@color/color_textview_84"/>
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_80dp"
                    android:layout_marginRight="@dimen/_80dp"
                    android:layout_marginTop="@dimen/_5dp"
                    android:layout_marginBottom="@dimen/_5dp"
                    android:adjustViewBounds="true"
                    android:scaleType="fitCenter"
                    android:src="@drawable/card"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10dp"
                    android:layout_marginBottom="@dimen/_10dp"
                    android:layout_marginLeft="@dimen/_5dp"
                    android:layout_marginRight="@dimen/_5dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:textSize="@dimen/text_size_medium14"
                        android:layout_gravity="center_vertical"
                        android:layout_marginRight="@dimen/_15dp"
                        android:gravity="center_vertical"
                        android:text="@string/lable_id_login"
                        android:textStyle="bold"/>
                    <TextView
                        android:id="@+id/tvUserLogin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textSize="@dimen/text_size_medium14"
                        android:layout_gravity="center_vertical"
                        android:gravity="center_vertical"
                        android:background="@color/color_bg_user_login_lable"
                        android:padding="@dimen/_4dp"
                        android:textStyle="bold"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/bg_detail_off"
                    android:padding="@dimen/_5dp">
                    <TextView
                        android:id="@+id/tvCouponName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/text_size_medium14"
                        android:textStyle="bold"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/bg_detail_off_member"
                    android:layout_margin="@dimen/_5dp"
                    android:padding="@dimen/_5dp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/text_size_medium14"
                        android:textColor="@color/white"
                        android:text="@string/detail_coupon_member_lable"
                        android:textStyle="bold"/>
                </LinearLayout>
                <TextView
                    android:id="@+id/tvBenefit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_3dp"
                    android:layout_marginLeft="@dimen/_5dp"
                    android:layout_marginRight="@dimen/_5dp"
                    android:layout_marginBottom="@dimen/_10dp"
                    android:textSize="@dimen/text_size_medium14"/>
                <TextView
                    android:id="@+id/tvNote"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size_medium"
                    android:layout_marginLeft="@dimen/_5dp"
                    android:layout_marginRight="@dimen/_5dp"
                    android:text="@string/string_note"/>
                <TextView
                    android:id="@+id/tvBenefitNote"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_size_small"
                    android:layout_marginLeft="@dimen/_5dp"
                    android:layout_marginRight="@dimen/_5dp"/>
            </LinearLayout>


            <TextView
                android:id="@+id/tvCopyRight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_below="@id/header"
                android:text="@string/detail_offline_copyright"
                android:layout_marginTop="@dimen/_10dp"
                android:textSize="@dimen/text_size_small"
                android:textAlignment="center"
                android:textColor="@color/color_textview_84"/>
        </RelativeLayout>
    </ScrollView>

</LinearLayout>