<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
<android.support.v7.widget.CardView
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="@dimen/_1dp"
    android:layout_margin="@dimen/_5dp"
    android:layout_gravity="center"
    card_view:cardPreventCornerOverlap="false"
    card_view:cardCornerRadius="@dimen/_3dp">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:id="@+id/lnContainer">
    <LinearLayout
        android:id="@+id/llCoupon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/white"
        android:paddingBottom="@dimen/_5dp"
        android:paddingTop="@dimen/_5dp">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_5dp"
            android:layout_marginRight="@dimen/_5dp"
            android:orientation="vertical">
            <ImageView
                android:layout_width="@dimen/_70dp"
                android:layout_height="@dimen/_70dp"
                android:src="@drawable/img_item_coupon"
                android:id="@+id/img_item_coupon" />
            <TextView
                android:id="@+id/tvCategoryName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:layout_marginTop="@dimen/_1dp"
                android:textAlignment="center"
                android:text="@string/item_coupon_category_name"
                android:textSize="@dimen/text_size_11sp"
                android:background="@drawable/bg_catelogy_27"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingRight="@dimen/_5dp"
            android:orientation="vertical">
            <TextView
                android:id="@+id/tvArea"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_1dp"
                android:layout_marginRight="@dimen/_5dp"
                android:textSize="@dimen/text_size_12sp"
                android:text="Area"
                android:textAlignment="textStart"
                android:textColor="@color/warmGrey"/>
            <TextView
                android:id="@+id/tvCompanyName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/_5dp"
                android:gravity="center_vertical"
                android:textSize="@dimen/text_size_large16"
                android:textColor="@color/black"
                android:ellipsize="end"
                android:text="@string/item_coupon_company_name"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/tvDurationCoupon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_3dp"
                android:layout_marginBottom="@dimen/_1dp"
                android:layout_marginRight="@dimen/_5dp"
                android:textSize="@dimen/text_size_12sp"
                android:text="@string/limit_time"
                android:textAlignment="textStart"
                android:textColor="@color/warmGrey"/>
        </LinearLayout>
    </LinearLayout>
    <include layout="@layout/line_layout" android:visibility="gone"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone">
        <LinearLayout
            android:id="@+id/lnBtnLike"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:clickable="true"
            android:background="@drawable/button_list_coupon_fac"
            android:layout_weight="1">
            <ImageView
                android:id="@+id/imvLike"
                android:layout_width="wrap_content"
                android:layout_height                                                                                                                                                                                                                                                                                                                                                                                          ="wrap_content"
                android:layout_marginRight="@dimen/_3dp"
                android:src="@drawable/icon_star_on"/>
            <TextView
                android:id="@+id/tvLike"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center_vertical"
                android:textColor="@color/yellowOrange"
                android:text="@string/btn_title_like"
                android:textSize="@dimen/text_size_14sp"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/lnBtnDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:clickable="true"
            android:background="@drawable/button_list_coupon"
            android:layout_weight="1">
            <ImageView
                android:id="@+id/imvDetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/_4dp"
                android:src="@drawable/icon_coupon"/>
            <TextView
                android:id="@+id/tvLink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center_vertical"
                android:text="@string/btn_title_ticket_free"
                android:textColor="@color/color_text_btn_like"
                android:textSize="@dimen/text_size_14sp"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>